# quantem.widget

./: .gitignore  README.md  dev.md  package.json  pyproject.toml  widget_architecture_diagrams.py
.github/workflows/: ci.yml  docs.yml  publish.yml  smoke-loaders.yml
data/: MoS2.cif
docs/: changelog.md  conf.py  getting-started.rst  index.md  index.rst
docs/_static/: custom.css
docs/api/: align2d.rst  array_utils.rst  bin.rst  clicker.rst  edit2d.rst  index.md  index.rst  mark2d.rst  show1d.rst  (+7 more)
js/: colormaps.ts  control-customizer.tsx  format.ts  histogram.ts  scalebar.ts  stats.ts  theme.ts  tool-parity.ts  webgl-volume.ts  webgpu-fft.ts
scripts/: bin_batch.py  check_tool_parity.py  generate_catalog.py  run_all_notebooks.py  show4dstem_export.py  verify_testpypi.sh
tests/: _smoke_show3d_loaders.ipynb  capture_align2d.py  capture_bin.py  capture_clicker.py  capture_mark2d.py  capture_show2d.py  capture_show3d.py  capture_show3dvolume.py  capture_show4dstem.py  capture_showcomplex2d.py  conftest.py  test_array_utils.py  test_bin_batch.py  test_e2e_show2d_loader_smoke.py  test_e2e_show3d_loader_smoke.py  test_e2e_smoke.py  test_export_metadata_contract.py  test_show4dstem_batch.py  test_tool_parity_registry.py  test_widget_align2d.py  test_widget_bin.py  test_widget_clicker.py  test_widget_dataset_integration.py  test_widget_edit2d.py  test_widget_mark2d.py  test_widget_merge4dstem.py  test_widget_show1d.py  test_widget_show2d.py  test_widget_show3d.py  test_widget_show3dvolume.py  test_widget_show4d.py  test_widget_show4dstem.py  test_widget_showcomplex.py
(+1495 files in other folders)
